<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context="com.mainscreen.ui.LandingScreenActivity">

    <TextView
        android:id="@+id/splashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/brain_gain"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashIconGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashTitle"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/splashGearGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.57" />

        <ImageView
            android:id="@+id/splashBrainIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/brain_icon"
            app:tint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/splashGear1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="68dp"
            android:contentDescription="@null"
            android:rotation="18"
            app:layout_constraintBottom_toBottomOf="@id/splashBrainIcon"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/splashGearGuide"
            app:layout_constraintTop_toTopOf="@id/splashBrainIcon"
            app:layout_constraintVertical_bias="0.128"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.11"
            app:srcCompat="@drawable/ic_gear"
            app:tint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/splashGear2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="84dp"
            android:contentDescription="@null"
            android:rotation="-12"
            app:layout_constraintBottom_toBottomOf="@id/splashBrainIcon"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/splashGearGuide"
            app:layout_constraintTop_toTopOf="@id/splashBrainIcon"
            app:layout_constraintVertical_bias="0.304"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.085"
            app:srcCompat="@drawable/ic_gear"
            app:tint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/splashGear3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="88dp"
            android:contentDescription="@null"
            android:rotation="28"
            app:layout_constraintBottom_toBottomOf="@id/splashBrainIcon"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/splashGearGuide"
            app:layout_constraintTop_toTopOf="@id/splashBrainIcon"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.065"
            app:srcCompat="@drawable/ic_gear"
            app:tint="@color/colorPrimaryDark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/splashTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/splash_tagline"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:shadowColor="#800B1E38"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashIconGroup" />

    <ProgressBar
        android:id="@+id/splashProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressBackgroundTint="#26FFFFFF"
        android:progressTint="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
